--- a/style.css
+++ b/style.css
@@ -8,24 +8,29 @@
 *{
     margin: 0;
     padding: 0;
+    outline: solid 1px red;
 }
+
 
 body {
     height: 100vh;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgb(254, 231, 216);
+
 }
 
+
 .logo {
-    width: 100px;
-    height: 100px;
+    width: 20%;
+    height: 100%;
 }
 
 .card-body {
     position: absolute;
     background-color: rgba(0,0,0,.5);
     color: #fff;
-    width: 700px;
-    height: 100px;
+    width: 40%;
+    height: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,8 +41,8 @@ body {
 
 .card-image {
    position: absolute;
-   width: 700px;
-   height: 100%;
+   width: 40%;
+   height: 100vh;
    z-index: -1;
 }
 
@@ -47,10 +52,72 @@ body {
 }
 
 .wrapper {
-    width: 700px;
+    width: 40%;
     position: absolute; 
     font-size: small;
     color: rgb(255, 255, 255);
     text-align: center;
     top: 95%; 
 }
+
+.form {
+    width: 60%;
+    height: 100vh;
+    position: absolute;
+    left: 40%;
+}
+
+.text {
+    width: 90%; 
+    height: 15%;
+    font-size: 1rem;
+    margin-top: 10%;
+    padding: 10px;
+}
+
+.text1{
+    padding-bottom: 20px;
+}
+
+.signup-form {
+    width: 100%;
+    height: 40%;
+    box-shadow: 3px 5px rgb(199, 170, 170);
+    background-color: rgb(89, 17, 17);
+}
+
+h1 {
+    padding: 10px;
+    color: #fff;
+    font-size: medium;
+}
+
+.name, .contact-info, .password-info {
+    color: #fff;
+    font-size: 0.8rem;
+    padding: 20px;
+    padding-left: 40px;
+    display: flex;
+    gap: 30%;
+}
+
+.name1, .name2, .email, .phone, .password,
+.confirm-password {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.name input[type='text'], .contact-info input[type='email'],
+.contact-info input[type='number'], .password input[type='password'],
+.confirm-password input[type='password'] {
+    background-color: #FFFFFF;
+    border: 1px solid #D6D9DC;
+    border-radius: 3px;
+    width: 150%;
+    padding: 5px;
+    font-size: 15px;
+    margin-top: 5px;
+}
+
+
