--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
 *{
     margin: 0;
     padding: 0;
-    outline: solid 1px red;
 }
 
 
@@ -73,6 +72,7 @@ body {
     font-size: 1rem;
     margin-top: 10%;
     padding: 10px;
+    font-weight:300;
 }
 
 .text1{
@@ -81,7 +81,7 @@ body {
 
 .signup-form {
     width: 100%;
-    height: 40%;
+    height: 40vh;
     box-shadow: 3px 5px rgb(199, 170, 170);
     background-color: rgb(89, 17, 17);
 }
@@ -109,7 +109,7 @@ h1 {
 }
 
 .name input[type='text'], .contact-info input[type='email'],
-.contact-info input[type='number'], .password input[type='password'],
+.contact-info input[type='tel'], .password input[type='password'],
 .confirm-password input[type='password'] {
     background-color: #FFFFFF;
     border: 1px solid #D6D9DC;
@@ -120,4 +120,23 @@ h1 {
     margin-top: 5px;
 }
 
+button {
+    margin: 30px; 
+    border-radius: 3px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #FFFFFF;
+    background-color: rgb(89, 17, 17);
+    border: none;
+    padding: 10px 40px;
+    cursor: pointer;
+    box-shadow: 3px 5px rgb(199, 170, 170);
+}
 
+.account {
+    margin: 10px 30px; 
+}
+
+button:hover {
+    background-color: rgb(193, 110, 110);
+  }
