--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
 
 body {
     height: 100vh;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(254, 231, 216);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: rgb(236, 236, 236);
 
 }
 
@@ -69,10 +69,10 @@ body {
 .text {
     width: 90%; 
     height: 15%;
-    font-size: 1rem;
+    font-size: 1.2rem;
     margin-top: 10%;
     padding: 10px;
-    font-weight:300;
+    font-weight:600;
 }
 
 .text1{
@@ -82,8 +82,8 @@ body {
 .signup-form {
     width: 100%;
     height: 40vh;
-    box-shadow: 3px 5px rgb(199, 170, 170);
-    background-color: rgb(89, 17, 17);
+    box-shadow: 3px 5px rgb(190, 190, 190);
+    background-color: rgb(54, 54, 54);
 }
 
 h1 {
@@ -126,11 +126,11 @@ button {
     font-size: 16px;
     font-weight: bold;
     color: #FFFFFF;
-    background-color: rgb(89, 17, 17);
+    background-color: rgb(0, 0, 0);
     border: none;
     padding: 10px 40px;
     cursor: pointer;
-    box-shadow: 3px 5px rgb(199, 170, 170);
+    box-shadow: 3px 5px rgb(181, 181, 181);
 }
 
 .account {
@@ -138,5 +138,10 @@ button {
 }
 
 button:hover {
-    background-color: rgb(193, 110, 110);
-  }
+    background-color: rgb(108, 108, 108);
+}
+
+input[type='password']:invalid {
+    border: 2px solid red;
+}
+
