--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 *{
     margin: 0;
     padding: 0;
+    outline: 1px solid red;
 }
 
 
@@ -15,13 +16,18 @@ body {
     height: 100vh;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: rgb(236, 236, 236);
-
+    display: flex;
+    flex-direction: column;
 }
 
+.body {
+    flex: 1; 
+    display: flex;
+}
 
 .logo {
-    width: 20%;
-    height: 100%;
+    width: 10vw;
+    height: 10vh;
 }
 
 .card-body {
@@ -39,8 +45,7 @@ body {
 }
 
 .card-image {
-   position: absolute;
-   width: 40%;
+   width: 40vw;
    height: 100vh;
    z-index: -1;
 }
@@ -59,16 +64,17 @@ body {
     top: 95%; 
 }
 
+
+
+
 .form {
-    width: 60%;
+    width: 60vw;
     height: 100vh;
-    position: absolute;
-    left: 40%;
 }
 
 .text {
-    width: 90%; 
-    height: 15%;
+    width: 50vw; 
+    height: 15vh;
     font-size: 1.2rem;
     margin-top: 10%;
     padding: 10px;
@@ -80,8 +86,8 @@ body {
 }
 
 .signup-form {
-    width: 100%;
-    height: 40vh;
+    width: 60vw;
+    height: auto;
     box-shadow: 3px 5px rgb(190, 190, 190);
     background-color: rgb(54, 54, 54);
 }
@@ -143,5 +149,88 @@ button:hover {
 
 input[type='password']:invalid {
     border: 2px solid red;
+}
+
+@media only screen and (max-width: 900px) {
+.body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-image {
+    width: 100vw;
+    height: 20vh;
+}
+
+.card-body {
+    width: 100vw;
+    height: 10vh;
+    position: absolute;
+    top: 5vh;
+}
+
+.photo-credit {
+    width: 200px;   
+    font-size: 10px;
+    margin: 0 150px; 
+}
+
+.wrapper {
+    position: absolute;
+    top: 130px;
+}
+
+.form {
+    width: 100vw;
+    height: 80vh;
+}
+
+.text {
+    width: auto;
+    height: auto;
+    margin: 10px;
+}
+
+.signup-form {
+    width: auto;
+    height: auto;
+    margin-top: 20px;
+
+}
+
+.name, .contact-info, .password-info {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+
+}
+
+.name input[type='text'], .contact-info input[type='email'],
+.contact-info input[type='tel'], .password input[type='password'],
+.confirm-password input[type='password'] {
+    width: 60vw;
+  
+}
+
+.name1, .name2, .email, .phone, .password,
+.confirm-password {
+    margin: 10px;
+}
+
+.account {
+    padding-bottom: 20px;
+}
+
+.login {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+}
+
+
+
+
 }
 
